--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Beats, Rye &amp; Types
 subtitle: Beats, Rye &amp; Types with AQ and MRB. Music, Food, Programming.
 description: > # this means to ignore newlines until "baseurl:"
-  Beats, Rye &amp; Types is a podcast where AQ and MRB, two old friends, discuss their three main obsessions: music, food, and programming.
+  Your favorite podcast about Music, Food, and Programming
 baseurl: "" # the subpath of your site, e.g. /blog/
-copyright: "&#xA9; 2015 Aaron Quint &amp; Michael Bernstein"
+copyright: "&#xA9; 2015 BEATS RYE TYPES, LLC"
 author: Aaron Quint &amp; Michael Bernstein
 keywords: music,food,programming,computers,aq,mrb,brooklyn
 url: "http://beatsryetypes.com" # the base hostname & protocol for your site
